syntax = "proto3";
package kkaddal.omni.ethereumbridge;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ethereumbridge/params.proto";
import "ethereumbridge/eth_state.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/k-kaddal/omni/x/ethereumbridge/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/k-kaddal/omni/ethereumbridge/params";
  }
  // Queries a EthState by index.
	rpc EthState(QueryGetEthStateRequest) returns (QueryGetEthStateResponse) {
		option (google.api.http).get = "/k-kaddal/omni/ethereumbridge/eth_state/{index}";
	}

	// Queries a list of EthState items.
	rpc EthStateAll(QueryAllEthStateRequest) returns (QueryAllEthStateResponse) {
		option (google.api.http).get = "/k-kaddal/omni/ethereumbridge/eth_state";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetEthStateRequest {
	  string index = 1;

}

message QueryGetEthStateResponse {
	EthState ethState = 1 [(gogoproto.nullable) = false];
}

message QueryAllEthStateRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllEthStateResponse {
	repeated EthState ethState = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
